<resources>
    <string name="app_name">PersonalProject</string>

    <!-- login -->
    <string name="title">Personal Care</string>
    <string name="intro">환영합니다!</string>
    <string name="intro_1">로그인 후 Personal Care를 시작하세요!</string>
    <string name="intro_2">나를 위한 투자!</string>
    <string name="intro_3">나를 위한 정보를 만나보세요!</string>

    <!-- profile -->
    <string name="name">이름을 입력하세요</string>
    <string name="age">나이를 입력하세요</string>
    <string name="height">키를 입력하세요</string>
    <string name="weight">몸무게를 입력하세요</string>
    <string name="goalStep">목표 걸음 수를 입력하세요</string>
    <string name="picture">사진을 선택하세요</string>
    <string name="finish">완료</string>

    <!-- Dashboard -->
    <string name="feed">개인 피드</string>
    <string name="rss">rss</string>
    <string name="video">영상</string>
    <string name="sns">SNS</string>
    <string name="setting">Setting</string>

    <!-- facebook -->
    <string name="facebook_app_id">218522611945703</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Setting -->
    <string name="facebook">페이스 북</string>
    <string name="google">구글</string>
    <string name="instagram">인스타그램</string>
    <string name="youtube_channel">Youtube 채널 등록</string>
    <string name="connect">연결 됨</string>
    <string name="not_connect">연결 되지 않음</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
